--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <ul class="team-list">
             <li class="team-item">
               <img
-                srcset="./images/team1.jpg 1x, ./images/team-1@2x.jpg 2x"
+                srcset="./images/team-1.jpg 1x, ./images/team-1@2x.jpg 2x"
                 src="./images/team-1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -181,7 +181,7 @@
 
             <li class="team-item">
               <img
-                srcset="./images/team2.jpg 1x, ./images/team2@2x.jpg 2x"
+                srcset="./images/team-2.jpg 1x, ./images/team-2@2x.jpg 2x"
                 src="./images/team-2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -645,7 +645,7 @@
 
     <div class="mobile-menu">
       <div class="container mobile-menu-container">
-        <button class="modal-close-btn" type="button">
+        <button class="modal-close-btn" type="submit">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
