--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             </label>
           </div>
 
-          <button class="main-btn modal-submit-btn" type="button">Send</button>
+          <button class="main-btn modal-submit-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
