--- a/index.html
+++ b/index.html
@@ -327,16 +327,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-1.jpg    1x,
-                    ./images/portfolio-desk-1@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-1.jpg    1x,
+                      ./images/portfolio-desk-1@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-1.jpg    1x,
+                      ./images/portfolio-tab-1@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-1.jpg    1x,
+                      ./images/portfolio-mob-1@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-1.jpg"
+                    width="360"
+                    height="300"
+                    alt="Banking App"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -351,16 +371,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-2.jpg    1x,
-                    ./images/portfolio-desk-2@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-2.jpg    1x,
+                      ./images/portfolio-desk-2@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-2.jpg    1x,
+                      ./images/portfolio-tab-2@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-2.jpg    1x,
+                      ./images/portfolio-mob-2@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-2.jpg"
+                    width="360"
+                    height="300"
+                    alt="Cashless Payment"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -377,16 +417,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-3.jpg    1x,
-                    ./images/portfolio-desk-3@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-3.jpg    1x,
+                      ./images/portfolio-desk-3@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-3.jpg    1x,
+                      ./images/portfolio-tab-3@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-3.jpg    1x,
+                      ./images/portfolio-mob-3@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-3.jpg"
+                    width="360"
+                    height="300"
+                    alt="Meditation App"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -401,16 +461,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-4.jpg    1x,
-                    ./images/portfolio-desk-4@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-4.jpg    1x,
+                      ./images/portfolio-desk-4@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-4.jpg    1x,
+                      ./images/portfolio-tab-4@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-4.jpg    1x,
+                      ./images/portfolio-mob-4@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-4.jpg"
+                    width="360"
+                    height="300"
+                    alt="Taxi Service"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -425,16 +505,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-5.jpg    1x,
-                    ./images/portfolio-desk-5@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-5.jpg    1x,
+                      ./images/portfolio-desk-5@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-5.jpg    1x,
+                      ./images/portfolio-tab-5@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-5.jpg    1x,
+                      ./images/portfolio-mob-5@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-5.jpg"
+                    width="360"
+                    height="300"
+                    alt="Screen Illustrations"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -451,16 +551,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <img
-                  srcset="
-                    ./images/portfolio-desk-6.jpg    1x,
-                    ./images/portfolio-desk-6@2x.jpg 2x
-                  "
-                  src="./images/portfolio-desk-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio-desk-6.jpg    1x,
+                      ./images/portfolio-desk-6@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tab-6.jpg    1x,
+                      ./images/portfolio-tab-6@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mob-6.jpg    1x,
+                      ./images/portfolio-mob-6@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-desk-6.jpg"
+                    width="360"
+                    height="300"
+                    alt="Online Courses"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -645,7 +765,7 @@
 
     <div class="mobile-menu">
       <div class="container mobile-menu-container">
-        <button class="modal-close-btn" type="submit">
+        <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
