Replace <picture> elements with <img> tags

--- a/index.html
+++ b/index.html
@@ -327,36 +327,16 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-1.jpg    1x,
-                      ./images/portfolio-desk-1@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-1.jpg    1x,
-                      ./images/portfolio-tab-1@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-1.jpg    1x,
-                      ./images/portfolio-mob-1@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-1.jpg"
-                    width="360"
-                    height="300"
-                    alt="Banking App"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-1.jpg    1x,
+                    ./images/portfolio-desk-1@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -371,36 +351,16 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-2.jpg    1x,
-                      ./images/portfolio-desk-2@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-2.jpg    1x,
-                      ./images/portfolio-tab-2@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-2.jpg    1x,
-                      ./images/portfolio-mob-2@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-2.jpg"
-                    width="360"
-                    height="300"
-                    alt="Cashless Payment"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-2.jpg    1x,
+                    ./images/portfolio-desk-2@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -417,36 +377,16 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-3.jpg    1x,
-                      ./images/portfolio-desk-3@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-3.jpg    1x,
-                      ./images/portfolio-tab-3@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-3.jpg    1x,
-                      ./images/portfolio-mob-3@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-3.jpg"
-                    width="360"
-                    height="300"
-                    alt="Meditation App"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-3.jpg    1x,
+                    ./images/portfolio-desk-3@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -461,36 +401,16 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-4.jpg    1x,
-                      ./images/portfolio-desk-4@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-4.jpg    1x,
-                      ./images/portfolio-tab-4@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-4.jpg    1x,
-                      ./images/portfolio-mob-4@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-4.jpg"
-                    width="360"
-                    height="300"
-                    alt="Taxi Service"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-4.jpg    1x,
+                    ./images/portfolio-desk-4@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -505,36 +425,16 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-5.jpg    1x,
-                      ./images/portfolio-desk-5@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-5.jpg    1x,
-                      ./images/portfolio-tab-5@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-5.jpg    1x,
-                      ./images/portfolio-mob-5@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-5.jpg"
-                    width="360"
-                    height="300"
-                    alt="Screen Illustrations"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-5.jpg    1x,
+                    ./images/portfolio-desk-5@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -551,36 +451,16 @@
 
             <li class="portfolio-item">
               <div class="portfolio-thumb">
-                <picture>
-                  <source
-                    srcset="
-                      ./images/portfolio-desk-6.jpg    1x,
-                      ./images/portfolio-desk-6@2x.jpg 2x
-                    "
-                    media="(min-width: 1158px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-tab-6.jpg    1x,
-                      ./images/portfolio-tab-6@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/portfolio-mob-6.jpg    1x,
-                      ./images/portfolio-mob-6@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)"
-                  />
-                  <img
-                    src="./images/portfolio-desk-6.jpg"
-                    width="360"
-                    height="300"
-                    alt="Online Courses"
-                  />
-                </picture>
-
+                <img
+                  srcset="
+                    ./images/portfolio-desk-6.jpg    1x,
+                    ./images/portfolio-desk-6@2x.jpg 2x
+                  "
+                  src="./images/portfolio-desk-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -758,7 +638,7 @@
             </label>
           </div>
 
-          <button class="main-btn modal-submit-btn" type="submit">Send</button>
+          <button class="main-btn modal-submit-btn" type="button">Send</button>
         </form>
       </div>
     </div>
